<resources>
    <string name="app_name">婚姻建議</string>
    <string name="gender">性別:</string>
    <string name="age">年齡:</string>
    <string name="ok">確定</string>
    <string-array name="genders">
        <item>男生</item>
        <item>女生</item>
    </string-array>
    <string name="no_hurry">不急</string>
    <string name="find_couple">找男女朋友</string>
    <string name="get_marry">趕快結婚</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="male_age1">小於28歲</string>
    <string name="male_age2">28~33歲</string>
    <string name="male_age3">大於33歲</string>
    <string name="female_age1">小於25歲</string>
    <string name="female_age2">25~30歲</string>
    <string name="female_age3">大於30歲</string>

</resources>