<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/rgGender"
        app:layout_constraintEnd_toEndOf="@+id/rgGender"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="184dp"
        android:layout_height="97dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="204dp"
            android:layout_height="42dp"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <TextView
        android:id="@+id/tvR"
        android:layout_width="176dp"
        android:layout_height="73dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOk"
        app:layout_constraintVertical_bias="0.071" />

    <RadioGroup
        android:id="@+id/rgAge"
        android:layout_width="174dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbAge1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age1" />

        <RadioButton
            android:id="@+id/rbAge2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age2" />

        <RadioButton
            android:id="@+id/rbAge3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_age3" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>